--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <button
             class="w-[200px] mt-[20px] bg-[#000] py-[10px] rounded-[8px] cursor-pointer"
             onclick="getPerfil()"
+            id="pesquisar"
           >
             <p class="font-semibold" style="color: #fff">Pesquisar</p>
           </button>
